Add a logout button and style it
* Change the class name of the logout button to `button-logout` in `Perfil.js`
* Add CSS styles for the logout button in `Perfil.css`:
  - Red background color
  - White text color
  - Small padding
  - No border
  - Rounded corners
  - Centered alignment
  - Space between the footer and the button

--- a/justclick2/src/css/Perfil.css
+++ b/justclick2/src/css/Perfil.css
@@ -257,3 +257,18 @@ h4 {
   font-size: 14px;
 }
 
+.button-logout {
+  background-color: red;
+  color: white;
+  padding: 5px 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 100px;
+  text-align: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
