--- a/justclick2/src/css/Inicio.css
+++ b/justclick2/src/css/Inicio.css
@@ -338,6 +338,11 @@ h4 {
   justify-content: space-between;
 }
 
+.react-calendar__tile--active{
+  background-color: #0056b3 !important;
+  color: white;
+}
+
 .react-calendar__navigation__arrow {
   color: black;
   font-size: 1.5rem;
@@ -692,4 +697,39 @@ h4 {
   margin-left: 200px;
   color: white;
   text-decoration: underline;
+}
+
+.chat-btn {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 8px 14px;
+  border-radius: 8px;
+  cursor: pointer;
+  margin-left: 12px;
+  font-weight: bold;
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.chat-btn:hover {
+  background-color: #0056b3;
+}
+
+.chat-badge {
+  position: absolute;
+  top: -6px;
+  right: -10px;
+  min-width: 16px;
+  text-align: center;
+}
+
+.chat-badge {
+  background-color: red;
+  color: white;
+  font-size: 12px;
+  padding: 2px 6px;
+  border-radius: 50%;
+  margin-left: 6px;
 }
