--- a/justclick2/src/css/Inicio.css
+++ b/justclick2/src/css/Inicio.css
@@ -50,7 +50,6 @@ html {
   margin-top: 10px;
 }
 
-/* Asegurar que estén alineados */
 .nav-left,
 .nav-right {
   display: flex;
@@ -66,9 +65,8 @@ html {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 2px solid black ; 
+  border-bottom: none;
 }
-
 
 .nav-menu a {
   color: black;
@@ -103,7 +101,7 @@ html {
   background-position: center; 
   width: 100%;
   height: 75vh; 
-  margin-top: -101px; 
+  margin-top: -120px; 
   position: relative;
 }
 
