--- a/justclick2/src/css/Inicio.css
+++ b/justclick2/src/css/Inicio.css
@@ -778,10 +778,10 @@ h4 {
 }
 
   .nav-menu .logo {
-      width: 150px;
-      height: auto;
-      margin-right: -35px;
-      margin-left: -75px;
+     width: 100px !important;
+     height: auto !important;
+      margin-right: -25px;
+      margin-left: -65px;
   }
 
   .nav-left {
@@ -800,20 +800,22 @@ h4 {
     gap: 6px;
   }
 
-  .logo,
-  .perfil-img img,
   .chat-btn img {
     width: 32px;
     height: 32px;
+    margin-left: 10px;
+  }
+
+  .perfil-img img{
+    width: 32px;
+    height: 32px;
+    margin-top: 15px;
+    margin-left: -10px;
   }
 
   .chat-btn {
     margin: 0;
     padding: 0;
-  }
-
-  .perfil-img img {
-    margin-top: 0;
   }
 
   .nav-menu {
