--- a/justclick2/src/css/Inicio.css
+++ b/justclick2/src/css/Inicio.css
@@ -757,7 +757,7 @@ h4 {
 }
 
 @media (max-width: 768px) {
-.nav-menu .container {
+  .nav-menu .container {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
@@ -773,9 +773,19 @@ h4 {
     text-transform: capitalize;
     transition: color 0.3s;
     font-weight: bold;
-    margin-right: -15px !important;
+    margin-right: -5px !important;
     cursor: pointer;
-}
+  }
+
+  .fondo-imagen::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.607) 0%, rgba(255, 255, 255, 0) 100%);
+  }
 
   .nav-menu .logo {
      width: 100px !important;
@@ -803,7 +813,7 @@ h4 {
   .chat-btn img {
     width: 32px;
     height: 32px;
-    margin-left: 20px;
+    margin-left: 30px;
   }
 
   .perfil-img img{
