--- a/justclick2/src/css/Registro.css
+++ b/justclick2/src/css/Registro.css
@@ -100,3 +100,81 @@
     margin-top: 10px;
   }
   
+  @media (max-width: 768px) {
+  .registro-container {
+    padding: 20px 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .registro-box {
+    flex-direction: column; 
+    height: auto;
+    width: 100%;
+    max-width: 500px;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+  }
+
+  .registro-left,
+  .registro-right {
+    width: 100%;
+    padding: 50px 10px;
+  }
+
+  .registro-left {
+    border-radius: 0 0 15px 15px;
+    background-color: white;
+  }
+
+  .registro-right {
+    border-radius: 15px 15px 0 0;
+    min-height: 100px;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+
+  .registro-logo {
+    width: 150px;
+    margin-top: -30px;
+  }
+
+  .registro-slogan {
+    font-size: 16px;
+    text-align: center;
+    margin-bottom: 16px;
+  }
+
+  form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  input,
+  .button-cuenta,
+  .button-ubi {
+    width: 130% !important;
+    font-size: 15px;
+  }
+
+  .button-ubi {
+    width: 60% !important;
+  }
+
+  .registro-info h2 {
+    font-size: 20px;
+  }
+
+  .registro-info p {
+    font-size: 14px;
+  }
+
+  p {
+    text-align: center;
+  }
+}
