--- a/justclick2/src/css/Inicio.css
+++ b/justclick2/src/css/Inicio.css
@@ -566,6 +566,23 @@ h4 {
   background-color: #0056b3;
 }
 
+.btn-avisar {
+  background-color: #ffc107;
+  color: white;
+  padding: 8px;
+  margin-top: 10px;
+  margin-bottom: -10px;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+}
+
+.btn-avisar:hover {
+  background-color: #e0a800;
+}
+
+
 /* Botón para cerrar */
 .modal-contenido > button {
   background: #6c757d;
