--- a/justclick2/src/css/Inicio.css
+++ b/justclick2/src/css/Inicio.css
@@ -663,7 +663,7 @@ h4 {
   font-size: 0.85rem;
   border-radius: 6px;
   border: 1px solid #ccc;
-  width: 100%;
+  width: 100% !important;
 }
 
 .formulario-reserva input:focus,
@@ -862,6 +862,11 @@ h4 {
 
   .section-container {
     width: 90%;
+  }
+
+  .inicio-container input{
+    width: 100% !important;
+    padding: 10px !important;
   }
 
   .footer-content {
